@@ -1,6 +1,9 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
+  *) mod_authz_core: Fix parsing of Require arguments in <AuthzProviderAlias>.
+     PR 53048. [Stefan Fritsch]
+
   *) core: Fix error handling in ap_scan_script_header_err_brigade() if there
      is no EOS bucket in the brigade. Fixes segfault with mod_proxy_fcgi.
      PR 48272. [Stefan Fritsch]
